# linkedin-games-archive

./: .gitignore  AGENTS.md  README.md  extract.py  pyproject.toml  render.py
.github/workflows/: daily-games.yml
.hermes/plans/: 2026-07-11_video_pipeline_plan.md  2026-07-11_webscraper_plan.md  2026-07-11_zip_video_pipeline.md  2026-07-12_pinpoint_crossclimb_plan.md
games/: __init__.py  common.py
games/crossclimb/: parser.py  renderer.py  scraper.py
games/minisudoku/: parser.py  renderer.py  scraper.py
games/patches/: parser.py  renderer.py  scraper.py
games/pinpoint/: parser.py  renderer.py  scraper.py
games/queens/: parser.py  renderer.py  scraper.py
games/tango/: parser.py  renderer.py  scraper.py
games/wend/: parser.py  renderer.py  scraper.py
games/zip/: parser.py  renderer.py  scraper.py
outputs/2026-07-11/: minisudoku.json  queens.json  tango.json  zip.json
outputs/2026-07-12/: minisudoku.json  queens.json  tango.json  zip.json
outputs/2026-07-13/: minisudoku.json  patches.json  queens.json  tango.json  wend.json  zip.json
outputs/2026-07-14/: minisudoku.json  patches.json  queens.json  tango.json  wend.json  zip.json
outputs/2026-07-15/: minisudoku.json  patches.json  queens.json  tango.json  wend.json  zip.json
outputs/2026-07-16/: minisudoku.json  patches.json  queens.json  tango.json  wend.json  zip.json
src/: build_legend.py  daily_cron.py  extract_patches.py  extract_pinpoint.py  extract_wend.py  extract_zip.py  get_htmls.py  get_htmls_playwright.py  run_all.py  scrape_games.py  tbp_capture.py  view_json.py
(+53 files in other folders)
